--- a/.github/workflows/my-deployment.yml
+++ b/.github/workflows/my-deployment.yml
@@ -1,4 +1,4 @@
-name: Test React App
+name: Deploy React App
 on: push
 jobs:
   test-my-staff:
@@ -10,3 +10,23 @@ jobs:
         run: npm ci
       - name: Test App
         run: npm run test
+  lint-my-code:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code from repository
+        uses: actions/checkout@v3
+      - name: Install deps
+        run: npm ci
+      - name: Lint App
+        run: npm run lint
+  build-my-app:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code from repository
+        uses: actions/checkout@v3
+      - name: Install deps
+        run: npm ci
+      - name: Build App
+        run: npm run build
+      - name: Deploy
+        run: echo Deploying...
