--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,5 +1,8 @@
 name: Print Pull request context
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
+  pull_request:
+    types: [opened, edited, reopened]
 jobs:
   just-print:
     runs-on: ubuntu-latest
