Ignore actions triggering after file changes in specific folder

--- a/.github/workflows/deployment-several-jobs-for-prod-branch.yml
+++ b/.github/workflows/deployment-several-jobs-for-prod-branch.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - "prod"
+    paths-ignore:
+      - 'workflows-examples/*'
 jobs:
   test-my-staff:
     runs-on: ubuntu-latest
