--- a/.github/workflows/deployment-matrix.yml
+++ b/.github/workflows/deployment-matrix.yml
@@ -41,7 +41,7 @@ jobs:
       matrix:
         node-version: [14, 16]
         os: [ubuntu-latest, windows-latest]
-    runs-on: ${{ matrix.node-version }}
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Get code from repository
         uses: actions/checkout@v3
