--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build & Deploy
 on: [push, workflow_dispatch]
 jobs:
   my-build:
@@ -15,3 +15,11 @@ jobs:
         with:
           path: build
           name: build-files
+  deploy:
+    needs: my-build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get build project
+        uses: actions/download-artifact@v3
+        with:
+          name: buil-files
