--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Get build project
         uses: actions/download-artifact@v3
         with:
-          name: buil-files
+          name: build-files
