--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -3,6 +3,7 @@ on: [push, workflow_dispatch]
 env:
   NODE_ENV: production
   GH_SECRET: 123
+  DEPL_SECRET: ${{ secrets.DEPLOY_SECRET }}
 jobs:
   my-build:
     runs-on: ubuntu-latest
@@ -10,12 +11,15 @@ jobs:
       - name: Print Environment Build
         run: |
           echo "${{ env.NODE_ENV }}"
-          echo "${{ env.GH_SECRET }}"
+          echo GH_SECRET "${{ env.GH_SECRET }}"
+          echo github secrets "${{ env.DEPL_SECRET }}"
   deploy:
-    needs: my-build
     runs-on: ubuntu-latest
+    env:
+      NODE_ENV: production-deploy
     steps:
       - name: Print Environment Build
         run: |
           echo "${{ env.NODE_ENV }}"
-          echo "${{ env.GH_SECRET }}"
+          echo GH_SECRET "${{ env.GH_SECRET }}"
+          echo github secrets "${{ env.DEPL_SECRET }}"
